--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <relativePath/>
     </parent>
     <groupId>com.rpgen</groupId>
-    <artifactId>rpgen</artifactId>
+    <artifactId>rpgen-core</artifactId>
     <version>1.0-SNAPSHOT</version>
     <properties>
         <maven.compiler.source>16</maven.compiler.source>
